--- a/sass/layout/searchInput.scss
+++ b/sass/layout/searchInput.scss
@@ -12,6 +12,13 @@
         width: 100%;
         @include box-shadow;
         font-size: 1.5rem;
+        @include transition(all);
+        border: 2px solid $white;
+        &:focus{
+            outline: 2px solid transparent;
+            outline-offset: 2px;
+            border: 2px solid $greenPrimary
+        }
     }
     .search-input-icon{
         position: absolute;
